--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
     </style>
   </head>
   <body>
-    <h1 class="typewriter">Search Your Coding Problems</h1>
+    <h1 class="typewriter">CP Problems One Solution</h1>
     <div class="form">
       <form method="POST">
         <div class="item">{{ form.hidden_tag() }}</div>
@@ -89,103 +89,7 @@
           </div>
         {% endfor %}
       {% else %}
-        <div class="no-result">Sorry, no result exists!</div>
-      {% endif %}
-    </div>
-  </body>
-</html>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Coding Problem Search Engine</title>
-    <link rel="icon" type="image/x-icon" href="YOUR_ICON_URL">
-    <link rel="stylesheet" href="/static/style.css" />
-    <style>
-      body {
-        background-color: #f7f7f7;
-        font-family: Arial, sans-serif;
-      }
-      
-      h1 {
-        color: #e22b2b;
-        font-size: 32px;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 40px;
-      }
-      
-      .form {
-        margin-top: 40px;
-        text-align: center;
-      }
-      
-      .item {
-        margin-bottom: 15px;
-      }
-      
-      .search-input {
-        width: 300px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-      }
-      
-      .submit-button {
-        background-color: #e22b2b;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-      }
-      
-      .maincontainer {
-        margin-top: 40px;
-        text-align: center;
-      }
-      
-      .result {
-        margin-bottom: 20px;
-      }
-      
-      .result a {
-        color: #e22b2b;
-        font-size: 18px;
-        text-decoration: none;
-      }
-      
-      .result a:hover {
-        text-decoration: underline;
-      }
-      
-      .no-result {
-        color: #000;
-      }
-    </style>
-  </head>
-  <body>
-    <h1 class="typewriter">Search Your Coding Problems</h1>
-    <div class="form">
-      <form method="POST">
-        <div class="item">{{ form.hidden_tag() }}</div>
-        <div class="item">{{ form.search.label }} :</div>
-        <div class="item">{{ form.search(class="search-input") }}</div>
-        <div class="item">{{ form.submit(class="submit-button") }}</div>
-      </form>
-    </div>
-    <br>
-    <div class="maincontainer">
-      {% if results %}
-        {% for result in results %}
-          <div class="result">
-            <a href="{{ result['Question Link'] }}">{{ result['Question'] }}</a>
-            <br><br>
-          </div>
-        {% endfor %}
-      {% else %}
-        <div class="no-result">Sorry, no result exists!</div>
+        <div class="no-result">HELLOdiv>
       {% endif %}
     </div>
   </body>
